# CS7GV3_assignment1

./: CMakeLists.txt  README.md  goochFragmentShader.txt  main.cpp  minnaertFragmentShader.txt  phongFragmentShader.txt  phongFragmentShader1.txt  phongFragmentShader2.txt  simpleFragmentShader.txt  teapot.h  test.txt
